--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Krop fitness</title>
   <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
-  
+  <header class="header">
+    <a href="/" class="header-logo">
+      <img src="./images//header-logo-kropp.png.png" alt="header-logo" class="header-logo-image" width="135" height="25"
+        loading="lazy" />
+    </a>
+  </header>
 </body>
+
 </html>
