--- a/index.html
+++ b/index.html
@@ -11,9 +11,36 @@
 <body>
   <header class="header">
     <a href="/" class="header-logo">
-      <img src="./images//header-logo-kropp.png.png" alt="header-logo" class="header-logo-image" width="135" height="25"
+      <img src="./images//logo.png" alt="header-logo" class="header-logo-image" width="135" height="25"
         loading="lazy" />
     </a>
+    <nav class="header-menu">
+      <ul class="header-menu-list">
+        <li class="header-menu-item">
+          <a href="/" class="header-menu-link is-current">home</a>
+        </li>
+        <li class="header-menu-item">
+          <a href="/" class="header-menu-link">pages</a>
+        </li>
+        <li class="header-menu-item">
+          <a href="/" class="header-menu-link">portfolio</a>
+        </li>
+        <li class="header-menu-item">
+          <a href="/" class="header-menu-link">blog</a>
+        </li>
+        <li class="header-menu-item">
+          <a href="/" class="header-menu-link">shop</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="header-actions">
+      <button class="header-book-button button" type="button">Book now</button>
+      <button class="header-burger-button" type="button">
+      <span class="header-burger-button-line"></span>         
+      <span class="header-burger-button-line"></span>         
+      <span class="header-burger-button-line"></span>         
+      </button>
+    </div>
   </header>
 </body>
 
