--- a/index.html
+++ b/index.html
@@ -144,6 +144,93 @@
           </li>
         </ul>
       </section>
+      <section class="training-types">
+        <h2 class="visually-hidden">Training types</h2>
+        <ul class="training-types-list">
+          <li class="training-types-item">
+            <img
+              src="./icons/training-types/1.svg"
+              alt=""
+              class="training-types-image"
+              width="150"
+              height="140"
+            />
+            <h3 class="training-types-item-title">Maxpump</h3>
+          </li>
+          <li class="training-types-item">
+            <img
+              src="./icons/training-types/2.svg"
+              alt=""
+              class="training-types-image"
+              width="150"
+              height="140"
+            />
+            <h3 class="training-types-item-title">aron gym</h3>
+          </li>
+          <li class="training-types-item">
+            <img
+              src="./icons/training-types/3.svg"
+              alt=""
+              class="training-types-image"
+              width="150"
+              height="140"
+            />
+            <h3 class="training-types-item-title">fit & tone</h3>
+          </li>
+          <li class="training-types-item">
+            <img
+              src="./icons/training-types/4.svg"
+              alt=""
+              class="training-types-image"
+              width="150"
+              height="140"
+            />
+            <h3 class="training-types-item-title">forza</h3>
+          </li>
+          <li class="training-types-item">
+            <img
+              src="./icons/training-types/5.svg"
+              alt=""
+              class="training-types-image"
+              width="150"
+              height="140"
+            />
+            <h3 class="training-types-item-title">balance fitness</h3>
+          </li>
+          <li class="training-types-item">
+            <img
+              src="./icons/training-types/6.svg"
+              alt=""
+              class="training-types-image"
+              width="150"
+              height="140"
+            />
+            <h3 class="training-types-item-title">body sculpt</h3>
+          </li>
+        </ul>
+      </section>
+      <section class="join-us">
+        <div class="join-us-video-wrapper">
+          <video src="" class="join-us-video" width="960" height="600" poster="./images/video.jpg"></video>
+          <button class="join-us-video-play-button" type="button">Play</button>
+        </div>
+        <div class="join-us-body container">
+          <h2 class="join-us-title">Join us</h2>
+          <form action="" class="join-us-form">
+            <header class="join-us-form-header">
+              <h3 class="join-us-form-title backdrop-title centered title-big" data-title="go!"> Start here</h3>
+              <div class="join-us-form-subtitle">fill the form below to start your journey</div>
+            </header>
+            <div class="join-us-form-body">
+              <label class="visually-hidden" for="usename">Name</label>
+              <input id="usename" class="join-us-form-input input" placeholder="Name"/>
+              <label class="visually-hidden" for="email">Email</label>
+              <input id="email" class="join-us-form-input input" placeholder="Email" type="email"/>
+              <button class="join-us-form-button button transparent" type="submit">subscribe</button>
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
   </body>
 </html>
