--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <a class="location-button button transparent" href="/">view more</a>
         </div>
       </section>
-      <div class="family">
+      <section class="family">
         <header class="family-header container">
           <h2 class="family-title title-big backdrop-title centered" data-title="part">
             be a part of our fit family
@@ -257,7 +257,73 @@
           <img class="family-image" src="./images/family/4.jpg" alt="Training people" width="396" height="479" loading="lazy" >
           <img class="family-image" src="./images/family/5.jpg" alt="Training people" width="414" height="479" loading="lazy" >
         </div>
-      </div>
+      </section>
+      <section class="calculate">
+        <div class="calculate-inner container">
+          <div class="calculate-body">
+            <h2 class="calculate-title title-medium backdrop-title" data-title="BMI">Input your BMI</h2>
+            <div class="calculate-description">
+              <p>Duo graece ponderum ne, ei mel aliquando. Pro te tamquam nonumes, nam no nemore epicurei</p>
+            </div>
+            <form class="calculate-form">
+              <div class="calculate-form-body">
+                <label for="height" class="visually-hidden">Height</label>
+                <input type="number" class="calculate-input input" id="height" placeholder="Height / cm">
+                <label for="weight" class="visually-hidden">Weight</label>
+                <input type="number" class="calculate-input input" id="weight" placeholder="Weight / kg">
+                <label for="age" class="visually-hidden">Height</label>
+                <input type="number" class="calculate-input input" id="age" placeholder="Age">
+                <label class="visually-hidden" for="gender">Gender</label>
+                <select name="" id="gender" class="calculate-input input" required>
+                  <option value="" disabled selected>Gender</option>
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                </select>
+                <label class="visually-hidden" for="activity-factor">Activity factor</label>
+                <select name="" id="activity-factor" class="calculate-input input wide" required>
+                  <option value="" disabled selected>Select an activity factor</option>
+                  <option value="crossfit">Crossfit</option>
+                  <option value="bodyscale">Bodyscale</option>
+                </select>
+              </div>
+              <button class="calculate-button button transparent" type="submit">Calculate</button>
+            </form>
+          </div>
+          <div class="calculate-table-wrapper">
+            <table class="calculate-table">
+              <thead>
+                <tr>
+                  <th>BMI</th>
+                  <th>Weight status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Below 18.5</td>
+                  <td>Underweight</td>
+                </tr>
+                <tr>
+                  <td>18.5 - 24.9</td>
+                  <td>Healthy</td>
+                </tr>
+                <tr>
+                  <td>25.0 - 29.9</td>
+                  <td>Overweight</td>
+                </tr>
+                <tr>
+                  <td>30.0 - and Above</td>
+                  <td>Obese</td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td colspan="2"><b>BMR</b>  Metabolic Rate / <b>BMI</b>  Body Mass Index</td>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
